<resources>
    <!-- General -->
    <string name="app_name">Mine Your Money</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="confirm">Confirm</string>
    <string name="drag_handle">Drag Handle</string>

    <!-- Startup Screen -->
    <string name="create_account">Create Account</string>
    <string name="login">Already have an account? Login</string>

    <!-- Sign Up Screen -->
    <string name="sign_up">Sign Up</string>
    <string name="enter_username">Enter your username</string>
    <string name="username_hint_example">e.g. johndoe123</string>
    <string name="enter_password">Enter your password</string>
    <string name="password_hint_example">e.g. ********</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_hint_example">Re-enter your password</string>

    <!-- Login Screen -->
    <string name="login_title">Login</string>

    <!-- Dashboard Screen -->
    <string name="dashboard_title">Dashboard</string>

    <!-- Wallets Screen -->
    <string name="wallets_title">Wallets</string>
    <string name="spending_overview">Spending Overview</string>
    <string name="create_new_wallet">Create New Wallet</string>
    <string name="add_expense">Add Expense</string>
    <string name="sort_wallets">Sort Wallets By</string>
    <string name="sort_default">Default</string>
    <string name="sort_latest">Balance: High-Low</string>
    <string name="sort_earliest">Balance: Low-High</string>
    <string name="wallet_icon">Wallet Icon</string>
    <string name="enter_wallet_name">Enter Wallet Name</string>
    <string name="enter_wallet_amount">Enter Initial Balance</string>

    <string name="money_left">You have R1000 unallocated funds</string>
    <string name="select_icon">Select Icon</string>

    <string name="enter_amount">Enter Amount</string>
    <string name="select_wallet">Select Wallet</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="select_date">Select Transaction Date</string>
    <string name="repeat_icon">Repeat Icon</string>
    <string name="select_recurrence">Select Recurrence</string>
    <string name="photo_icon">Photo Icon</string>
    <string name="upload_photo">Upload Photo (optional)</string>
    <string name="add_note_optional">Add Note (optional)</string>

    <!-- Budgets Screen -->
    <string name="budgets_title">Budgets</string>

    <!-- Crystals Screen -->
    <string name="crystals_title">Crystals</string>

    <!-- More Screen -->
    <string name="more_title">More</string>
    <string name="wallet_name_hint">e.g. Groceries, Savings</string>
    <string name="initial_balance_hint">e.g. R1,250.00</string>
    <string name="go_to_wallet">Go to Wallet</string>
    <string name="filter_expense_history">Filter expense history</string>
    <string name="total_spending">Total Spending</string>
    <string name="total_spending_per_wallet">Total Spending per Wallet</string>
    <string name="filter_wallets">Filter Wallets</string>
    <string name="transaction_history">Transaction History</string>
    <string name="view_expense_details">View Expense Details</string>
    <string name="filter_by_date">Filter by Date</string>
    <string name="start_date">Start Date:</string>
    <string name="open_calendar">Open Calendar</string>

</resources>