<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_drag_handle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/drag_handle"
        android:src="@drawable/ic_drag_handle"
        app:tint="?attr/android:textColorSecondary" />

    <!-- Title -->
    <TextView
        android:id="@+id/tv_sheet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="yes"
        android:text="@string/select_icon"
        android:textAppearance="@style/TextHeading" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- Icon Grid -->
        <GridLayout
            android:id="@+id/icon_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:alignmentMode="alignMargins"
            android:columnCount="4"
            android:rowCount="3"
            android:useDefaultMargins="true">

            <!-- Icon 1 -->
            <ImageButton
                android:id="@+id/img_icon1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/bg_icon_button"
                android:contentDescription="@string/wallet_icon"
                android:padding="12dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_wallets"
                android:tag="@drawable/ic_wallets" />

        </GridLayout>
    </ScrollView>
</LinearLayout>