<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="?attr/android:colorForeground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- Wallet Icon -->
        <ImageView
            android:id="@+id/img_wallet_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_wallets"
            android:contentDescription="@string/wallet_icon"
            app:tint="?attr/android:textColorSecondary"/>

        <!-- Wallet Name + Amount -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_wallet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_wallet_name"
                style="@style/TextLabel" />

            <TextView
                android:id="@+id/tv_wallet_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_wallet_amount"
                style="@style/TextBody" />
        </LinearLayout>

        <!-- Radio Button -->
        <RadioButton
            android:id="@+id/btn_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

</androidx.cardview.widget.CardView>