<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="12dp"
    android:gravity="center_vertical">

    <!-- Wallet Icon -->
    <ImageView
        android:id="@+id/img_wallet_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_icon_button"
        android:backgroundTint="?attr/android:colorForeground"
        android:elevation="6dp"
        android:translationZ="2dp"
        android:src="@drawable/ic_wallets"
        android:scaleType="centerInside"
        android:contentDescription="@string/wallet_icon"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Wallet Info -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_wallet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_wallet_name"
            android:textAppearance="@style/TextBody" />

        <TextView
            android:id="@+id/tv_transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="01 Oct 2025"
            android:textAppearance="@style/TextLabel" />
    </LinearLayout>

    <!-- Amount + Arrow -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_transaction_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/android:colorError"
            android:text="R 250.00"
            android:textAppearance="@style/TextBody"/>

        <ImageButton
            android:id="@+id/btn_arrow"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_arrow_right"
            android:background="@null"
            android:contentDescription="@string/view_expense_details"
            app:tint="?attr/android:textColorSecondary"/>
    </LinearLayout>
</LinearLayout>